# TeleDumpMaster

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
teledumpmaster/: __init__.py  __main__.py  cli.py  exceptions.py  logging_utils.py  sorter.py  uploader.py  watcher.py
tests/: __init__.py  test_config.py  test_logging_utils.py  test_sorter.py  test_uploader.py  test_watcher.py
