[project]
name = "teledumpmaster"
version = "1.0.0"
description = "Watch a folder and upload files to a Telegram channel in naturally sorted order"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TeleDumpMaster Contributors" }]
keywords = ["telegram", "uploader", "bot", "automation", "file-watcher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = ["requests>=2.31", "rich>=13.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
teledumpmaster = "teledumpmaster.cli:main"

[project.urls]
Homepage = "https://github.com/nayaksomkar/TeleDumpMaster"
Repository = "https://github.com/nayaksomkar/TeleDumpMaster"
Issues = "https://github.com/nayaksomkar/TeleDumpMaster/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["teledumpmaster"]

[tool.hatch.build.targets.sdist]
include = ["teledumpmaster", "README.md", "LICENSE", ".env.example"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
